DG-2008-07-31-0: Cleanup:    Moved test local function to global procedures.
                             Fixed for failed IZ 2387 test.
                 Review:     CR

RH-2008-07-31-0: Enhancem.:  Test for executing hedeby junit tests added
                 Review:     TB

DG-2008-07-30-0: Cleanup:    qmaster_spooling test failed because of new bug in
                             qsub (CR 6730437). Since this is not an spooling
                             issue the test was changed. 
                 Review:     EB

RH-2008-07-30-0: Enhancem.:  test for hedeby issue 527 added
                 Review:     TB, AF

EB-2008-07-28-0: Bugfix:     o fixed three tests which failed sometimes in CSP mode
                 Review:     MD

CR-2008-07-24-1: Bugfix:     o Testsuite will not test if distribution contains
                               sdm-test.jar file.
                 Review:     TB

CR-2008-07-24-0: Bugfix:     o Fixed hedeby test components/ge/stop_and_free_resources
                               (ge_stop_and_free_resources)
                             o Increased timeout and enhanced error messages in
                               produce_ambiguous_resource() in checktree_hedeby/util.tcl
                 Review:     TB

JG-2008-07-23-1: Bugfix:     Minor fixes and cleanup for 
                             system_tests/clients/qconf.
                 Review:     MD

AP-2008-07-23-0: Bugfix:     Host specific values shouldn't be added for 
                             hostlist attribute.
                 Review:     JG

CR-2008-07-23-0: Bugfix:     Fixed hedeby test cli/comp_lifecycle/ge_adapter
                             (ge_adapter_restart_test)
                 Review:     TB

JG-2008-07-23-0: Bugfix:     Workaround for CR 6728379 in check
                             functional/tight_integration.
                 Review:     DG

AP-2008-07-21-0: Bugfix:     Changed the names of upgrade sctipts.
                 Review:     LP
